...
            switch route {
            case .addBudget:
                Text("Add Budget")
            case .editBudget:
                Text("Edit Budget")
            case .addExpense:
                Text("Add Expense")
            case .viewExpense:
                Text("View Expense")
            case .settings:
                Text("Settings")
            }
        }
...
